# card_deck

./: .gitignore  LICENSE  README.md  pyproject.toml  quality_check.sh
.github/: .gitmessage  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation_update.md  security_report.md
card_deck/: __init__.py  card.py  exceptions.py  py.typed
doc_src/: Makefile
doc_src/source/: conf.py
doc_src/source/community/: support.md
doc_src/source/dev/: api.rst  modules.rst
docs/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  searchindex.js  sitemap.xml
docs/_sources/: index.rst.txt
docs/_sources/community/: contributing.md.txt  quality.md.txt
docs/_sources/dev/: api.rst.txt  card_deck.rst.txt  tests.rst.txt
docs/_sources/user/: install.md.txt
docs/community/: contributing.html  quality.html  support.html
docs/dev/: api.html  card_deck.html  modules.html  tests.html
docs/user/: install.html
tests/: __init__.py  test_card.py
